# morganaubert-resume

./: .editorconfig  .env.json.example  .eslintrc  .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .travis.yml  LICENSE  Makefile  Pipfile  README.md  README.rst  autoapp.py  circle.yml  config.py  gulpfile.babel.js  manage.py  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements-main.txt  requirements.freeze  requirements.txt  wsgi.py
.github/workflows/: ci-nodejs.yml  ci-python.yml
.provisioning/: .lxdock.yml  deploy.yml  inventory  inventory_lxdock  setup_container.yml
.provisioning/group_vars/: lxdock.yml  prod.yml
.provisioning/vars/: project.yml  secrets.yml
_provisioning/: deploy.yml
_provisioning/vars/: project.yml
ma/: __init__.py
ma/common/: viewmixins.py
ma/modules/: __init__.py
ma/public/: sitemaps.py  urls.py  views.py
ma/static/js/: App.js
ma/templates/: 403.html  500.html  base.html
ma_project/: context_processors.py  urls.py
ma_project/settings/: base.py  dev.py  prod.py
main/: __init__.py
main/templates/: base.html
morganaubert/: mixins.py  sitemaps.py  views.py
project/: context_processors.py  urls.py
project/settings/: base.py  dev.py
setup/requirements/: dev.txt  prod.txt
src/: manage.py
src/morganaubert/: mixins.py  sitemaps.py  urls.py  views.py  wsgi.py
src/utils/: context_processors.py  views.py
static/: bower.json  gulpfile.js
static/js/: main.js
static/less/: App.less  variables.less
templates/: 404.html  base.html  meta.html
tools/: gulpfile.babel.js
(+43 files in other folders)
